Update `pom.xml`, `App.java`, and enhance documentation.
Added a resources section in `pom.xml` to include all files from the `src/main/resources` directory. Updated `App.java` to import `Charset` for future encoding needs. Enhanced `README.md` with detailed project requirements, design patterns, dependencies, and an updated installation guide for better usability and clarity.